src/qir/snapshots/hugr_qir__qir__wasm_ext__test__wasm_codegen@llvm21_lookup_by_name.snap
---
source: src/qir/wasm_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal ptr @_hl.main.1({} %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret ptr @example_function
}

declare void @example_function() #0

attributes #0 = { "wasm" }
