src/qir/snapshots/hugr_qir__qir__wasm_ext__test__wasm_codegen@pre-mem2reg@llvm14_call_ret_int.snap
---
source: src/qir/wasm_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private i32 @_hl.main.1({} %0, i32 ()* %1) {
alloca_block:
  %"0" = alloca i32, align 4
  %"2_0" = alloca {}, align 8
  %"2_1" = alloca i32 ()*, align 8
  %"4_0" = alloca i32, align 4
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store {} %0, {}* %"2_0", align 1
  store i32 ()* %1, i32 ()** %"2_1", align 8
  %"2_01" = load {}, {}* %"2_0", align 1
  %"2_12" = load i32 ()*, i32 ()** %"2_1", align 8
  %2 = call i32 %"2_12"()
  store i32 %2, i32* %"4_0", align 4
  %"4_03" = load i32, i32* %"4_0", align 4
  store i32 %"4_03", i32* %"0", align 4
  %"04" = load i32, i32* %"0", align 4
  ret i32 %"04"
}
