src/qir/snapshots/hugr_qir__qir__wasm_ext__test__wasm_codegen@pre-mem2reg@llvm21_call_args.snap
---
source: src/qir/wasm_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal {} @_hl.main.1({} %0, ptr %1, i32 %2) {
alloca_block:
  %"0" = alloca {}, align 8
  %"2_0" = alloca {}, align 8
  %"2_1" = alloca ptr, align 8
  %"2_2" = alloca i32, align 4
  %"4_0" = alloca {}, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store {} %0, ptr %"2_0", align 1
  store ptr %1, ptr %"2_1", align 8
  store i32 %2, ptr %"2_2", align 4
  %"2_01" = load {}, ptr %"2_0", align 1
  %"2_12" = load ptr, ptr %"2_1", align 8
  %"2_23" = load i32, ptr %"2_2", align 4
  call void %"2_12"(i32 %"2_23")
  store {} undef, ptr %"4_0", align 1
  %"4_04" = load {}, ptr %"4_0", align 1
  store {} %"4_04", ptr %"0", align 1
  %"05" = load {}, ptr %"0", align 1
  ret {} %"05"
}
